--- a/toyota-web/package.json
+++ b/toyota-web/package.json
@@ -16,11 +16,14 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "i18next": "^22.4.14",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
     "react-img-mapper": "^1.5.0",
+    "react-intl": "^6.4.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
